--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.0.0"
   },
   "devDependencies": {
@@ -15,8 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy" :"npm run build",
-    "deploy" : "gh-pages -b build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b build"
   },
   "browserslist": [
     ">0.2%",
